# touchstone-dss

./: .gitignore  CMakeLists.txt  COPYRIGHT  INSTALL  Makefile  README
dbms/pgsql/: create_tables.sql  drop_tables.sql
doc/: CMakeLists.txt  README  schema.dia  tsdss-user-guide.md  tsdss.md
examples/: pgsqlrc
queries/pgsql/: pgsql.conf  q1.sql  q2.sql  q3.sql
src/: CMakeLists.txt  common.c
src/datagen/: datagen.c  product.c  sales.c  store.c  time.c
src/include/: common.h  datagen.h
src/querygen/: querygen.c
src/scripts/: CMakeLists.txt  tsdss-generate-report  tsdss-load-test  tsdss-post-process  tsdss-power-test  tsdss-run-workload  tsdss-sysstat
src/scripts/pgsql/: CMakeLists.txt  tsdss-pgsql-create-database  tsdss-pgsql-create-tables  tsdss-pgsql-drop-tables  tsdss-pgsql-load-data  tsdss-pgsql-start  tsdss-pgsql-stat  tsdss-pgsql-stop
src/test/: CMakeLists.txt  datagen-sales-chunking.sh  datagen.sh  postgresql-args.sh  postgresql-data.sh  postgresql-workload.sh  postgresql.sh  querygen.sh  workload.sh
