CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
PROJECT(tsdss C)
SET(${PROJECT_NAME}_VERSION_MAJOR 0)
SET(${PROJECT_NAME}_VERSION_MINOR 1)

INCLUDE(CheckLibraryExists)

IF (DESTDIR)
    SET(INSTALLDEST ${DESTDIR})
ENDIF (DESTDIR)

ENABLE_TESTING()

SET(CMAKE_C_FLAGS "-g -Wall")

ADD_SUBDIRECTORY(doc)
ADD_SUBDIRECTORY(src)
