ADD_SUBDIRECTORY(pgsql)

INSTALL(PROGRAMS tsdss-load-test DESTINATION "${INSTALLDEST}/bin")
INSTALL(PROGRAMS tsdss-post-process DESTINATION "${INSTALLDEST}/bin")
INSTALL(PROGRAMS tsdss-power-test DESTINATION "${INSTALLDEST}/bin")
INSTALL(PROGRAMS tsdss-run-workload DESTINATION "${INSTALLDEST}/bin")
INSTALL(PROGRAMS tsdss-sysstat DESTINATION "${INSTALLDEST}/bin")
